[package]
name = "alfred-rust-calc"
version = "0.0.0"
authors = [ "Dave Goodell <dave@goodell.io>" ]
license = "MIT"
#repository = "https://github.com/kevinmehall/rust-peg"
description = "a programmer's calculator for Alfred implemented in Rust"
build = "build.rs"

[build-dependencies]
peg = { version = "0.5" }

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"
