[package]
name = "radix-calc"
version = "0.1.0"
authors = [ "Dave Goodell <dave@goodell.io>" ]
license = "MIT"
repository = "https://github.com/goodell/radix-calc"
description = "a programmer's calculator for Alfred implemented in Rust"
build = "build.rs"

[build-dependencies]
peg = { version = "0.5" }

[dependencies]
docopt = "0.7"
rustc-serialize = "0.3"
